--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@waves/event-sender",
+  "name": "@kia/event-sender",
   "version": "0.4.4",
   "description": "An interface for sending analytics events from Waves JS applications",
   "main": "dist/index.js",
@@ -8,7 +8,7 @@
   "private": false,
   "repository": {
     "type": "git",
-    "url": "https://github.com/wavesplatform/event-sender.git"
+    "url": "https://github.com/kiacoin/event-sender.git"
   },
   "files": [
     "dist"
